# Auto-Lab

./: .gitignore  IMPROVEMENTS.md  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: datasets.py  deployment.py  marketplace.py  payments.py
backend/app/core/: auth.py  config.py
backend/app/models/: __init__.py  dataset.py  deployed_model.py  job.py  payment.py  user.py
backend/app/schemas/: auth.py  deployment.py
backend/app/services/: llm.py  storage.py
backend/app/workers/: celery_app.py  drift.py  tasks.py
backend/ml/: agent_state.py  agents.py  graph.py  pipeline.py
backend/tests/: conftest.py
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/pages/: Experiments.tsx  Login.tsx  Register.tsx  Upgrade.tsx
