[project]
name = "auto-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.2",
    "bcrypt==4.0.1",
    "celery==5.4.0",
    "fastapi==0.111.0",
    "imbalanced-learn==0.12.3",
    "langchain==0.2.6",
    "langchain-core==0.2.38",
    "langchain-openai==0.1.17",
    "langgraph==0.1.19",
    "lightgbm==4.3.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "razorpay==1.4.2",
    "redis==5.0.7",
    "scikit-learn==1.5.0",
    "shap==0.45.0",
    "sqlalchemy==2.0.31",
    "uvicorn[standard]==0.30.1",
    "xgboost==2.0.3",
]
